--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   border: 0.5px solid red;
 } */
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  cursor: pointer;
+}
+
 .App {
   display: grid;
   grid-template-columns: 4fr 1fr;
@@ -14,24 +22,32 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
 }
 .banner__title {
-  font-size: 10vh;
+  font-size: 6vw;
+  color: white;
 }
 .banner__end {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 12vh;
   width: 12vh;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 10px;
+  background-color: #c31432;
 }
 .banner__username {
+  color: white;
+  text-align: center;
+  font-size: 1.5vh;
+  font-style: italic;
 }
 .banner__userimage {
-  height: 6vh;
+  height: 7vh;
+  border: 2px solid white;
+  border-radius: 100%;
 }
 
 .nav__container {
