--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ a:hover {
   grid-template-columns: 4fr 1fr;
   grid-template-rows: 15vh auto;
   grid-template-areas: "banner banner" "main nav";
+  font-size: 100%;
 }
 
 .banner__container {
@@ -25,7 +26,7 @@ a:hover {
   background-color: black;
 }
 .banner__title {
-  font-size: 6vw;
+  font-size: 5em;
   color: white;
 }
 .banner__end {
@@ -52,10 +53,27 @@ a:hover {
 
 .nav__container {
   grid-area: nav;
+  width: 100%;
+  background-color: lightgrey;
 }
+
 .nav__list {
+  background-color: white;
+  color: black;
+  font-size: 2em;
+  font-style: italic;
+  list-style-type: none;
+  margin: 2vh auto;
+  padding: 1vh 1vw;
+  text-align: center;
+  width: 70%;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 .nav__element {
+  color: grey;
+  font-size: 0.7em;
+  margin: 1vh;
 }
 
 .main__container {
