--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ a:hover {
   grid-template-rows: 15vh auto;
   grid-template-areas: "banner banner" "main nav";
   font-size: 100%;
+  background-color: lightgrey;
 }
 
 .banner__container {
@@ -54,9 +55,7 @@ a:hover {
 .nav__container {
   grid-area: nav;
   width: 100%;
-  background-color: lightgrey;
 }
-
 .nav__list {
   background-color: white;
   color: black;
@@ -80,6 +79,21 @@ a:hover {
   grid-area: main;
 }
 .main__sorting {
+  background-color: white;
+  width: 30%;
+  text-align: center;
+  margin: 1vh auto;
+  padding: 1vh 1vw;
+  border: 2px solid black;
+  border-radius: 5px;
+  font-style: italic;
+}
+.main__sorting button {
+  font-style: italic;
+  padding: 0.5vh 0.5vw;
+  border: 1px solid black;
+  font-size: 0.8em;
+  margin: 0.5vh 0;
 }
 .main__articles--small {
 }
@@ -93,10 +107,6 @@ a:hover {
 .article--small {
 }
 .comment--small {
-}
-
-.selected {
-  background-color: green;
 }
 
 @media screen and (max-width: 450px) {
@@ -121,4 +131,8 @@ a:hover {
   .main__container {
     grid-area: main;
   }
+}
+
+.selected {
+  background-color: lightgrey;
 }
