--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,8 @@ button:hover {
   margin: 1vh auto;
 }
 .main__form {
+  width: 60%;
+  margin: 1vh auto;
 }
 .main__comments {
   width: 60%;
@@ -264,6 +266,36 @@ button:hover {
   margin: 0;
   padding: 1vh 1vw;
   border-top: 2px solid black;
+}
+
+.form__container {
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-template-rows: 10vh;
+  grid-template-areas: "input submit";
+  margin: 2vh 0;
+  border-radius: 5px;
+  background-color: white;
+  z-index: 1;
+}
+.form__input {
+  border: none;
+  z-index: 0;
+  margin: 0 1vw;
+  font-style: italic;
+  font-size: 1em;
+}
+.form__button {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-left: 1px dashed grey;
+  border-right: none;
+  border-top: none;
+  border-bottom: none;
+  z-index: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .comment__container {
