--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-/* * {
-  border: 0.5px solid red;
-} */
-
 a {
   text-decoration: none;
   color: inherit;
@@ -469,4 +465,8 @@ button:hover {
 
 .selected {
   background-color: #c31432;
+}
+
+.selected--nav {
+  color: #c31432;
 }
