--- a/src/App.css
+++ b/src/App.css
@@ -110,21 +110,8 @@ button:hover {
   margin: 1vh auto;
 }
 .main__pagination {
-  border: 1px solid black;
-  background-color: white;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
+  width: 70%;
   margin: 1vh auto;
-  width: 30%;
-}
-.main__pagination div {
-  text-align: center;
-  width: 80%;
-  margin: 0.5vh auto;
-  font-style: italic;
-  display: flex;
-  justify-content: space-between;
 }
 
 .article__container--small {
@@ -342,6 +329,23 @@ button:hover {
   font-style: italic;
 }
 
+.pagination__container {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 1vh auto;
+}
+.pagination__container div {
+  margin: 1vh 1vw;
+  text-align: center;
+  font-size: 0.7em;
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 500px) {
   .App {
     display: flex;
@@ -409,6 +413,11 @@ button:hover {
   .main__comments {
     width: 80%;
     margin: 1vh auto;
+  }
+  .main__pagination {
+    width: 60%;
+  }
+  .main__pagination div {
   }
 
   .article__container--small {
