--- a/src/App.css
+++ b/src/App.css
@@ -344,6 +344,7 @@ button:hover {
   font-size: 0.7em;
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 @media screen and (max-width: 500px) {
